# telemetry-analyser

./: .dockerignore  .gitignore  README.md  compose.dev.yaml  compose.yaml
analysis-module/: README.md  pyproject.toml
analysis-module/docs/: architecture.md
analysis-module/models/: README.md
analysis-module/models/autoencoder/: metadata.json  model.pt  normalizer.json
analysis-module/models/autoencoder_px4/: evaluation_diagnostic.json  metadata.json  model.pt  scaler.joblib
analysis-module/models/isolation_forest/: evaluation.json  evaluation_diagnostic.json  metadata.json  model.joblib  scaler.joblib
analysis-module/models/isolation_forest_px4/: evaluation_diagnostic.json  metadata.json  model.joblib  scaler.joblib
analysis-module/src/analysis_module/: __init__.py
analysis-module/src/analysis_module/application/: __init__.py  analyzer.py  analyzer_factory.py  cause_diagnosis.py  config.py  context.py  detector.py  pipeline_analyzer.py  reason_diagnostics.py  result_aggregator.py  rule_based_analyzer.py
analysis-module/src/analysis_module/detectors/: __init__.py
analysis-module/src/analysis_module/domain/: __init__.py  anomalies.py  detectors.py  models.py  rules.py
analysis-module/tests/: support.py
analysis-module/tests/application/: test_analyzer_factory.py  test_public_api.py  test_reason_diagnostics.py  test_result_aggregator.py
analysis-module/tests/detectors/: test_detector_api.py  test_gps_spoofing_detector.py  test_impossible_altitude_detector.py  test_model_based_detectors.py  test_motion_inconsistency_detector.py  test_rule_based_rules.py  test_scoring_detector.py  test_telemetry_freeze_detector.py  test_telemetry_gap_detector.py
analysis-module/tests/domain/: test_anomaly_models.py  test_anomaly_types.py
analysis-module/tests/features/: test_feature_extractor.py  test_telemetry_history.py
analysis-module/tests/infrastructure/: test_model_artifact.py
analysis-service/: Dockerfile  README.md  compose.yaml  pyproject.toml
analysis-service/src/analysis_service/: __init__.py  settings.py
analysis-service/tests/application/: test_sessions.py
analysis-service/tests/presentation/: test_api.py  test_invalid_telemetry_input.py
telemetry-converter/: README.md  pyproject.toml
telemetry-converter/docs/: architecture.md
telemetry-converter/src/telemetry_converter/: __init__.py
telemetry-converter/tests/: README.md  test_converter_di.py  test_mavlink_conversion.py
telemetry-source/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
telemetry-source/backend/tests/: README.md
(+340 files in other folders)
