[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-module"
version = "0.1.0"
description = "Independent telemetry anomaly analysis module"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4,<2",
    "scikit-learn>=1.4,<2"
]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["analysis_module*"]
namespaces = false

[tool.setuptools.package-data]
analysis_module = ["py.typed"]
