[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-service"
version = "0.1.0"
description = "FastAPI orchestration service for telemetry analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "analysis-module==0.1.0",
    "fastapi>=0.115,<1",
    "telemetry-converter==0.1.0",
    "uvicorn[standard]>=0.30,<1"
]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1"
]

[tool.setuptools.packages.find]
where = ["src"]
