[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry-converter"
version = "0.1.0"
description = "Telemetry integration converter module"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["telemetry_converter*"]
namespaces = false

[tool.setuptools.package-data]
telemetry_converter = ["py.typed"]
