[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry-source-backend"
version = "0.1.0"
description = "Backend for configurable UAV telemetry sources"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1"
]

[tool.setuptools.packages.find]
where = ["src"]
